<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string-array name="menu_array">
        <item>Login</item>
        <item>Register</item>
        <item>About</item>
    </string-array>
    <string name="menu_name">menu</string>
    <string name="app_name">ThemeCenter</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="theme_moudel">Theme</string>
 	<string name="wallpaper_moudel">WallPaper</string>
  	<string name="mix_moudel">MIX</string>
   	<string name="local_moudel">Local</string>
   	<string name="ranklist_moudel">Ranklist</string>
   	<string name="new_commend">new Commend</string>
   	<string name="theme_name">theme Name:</string>
   	<string name="theme_price">Price:</string>
   	<string name="free">Free</string>
   	<string name="pull_up_more">Pull Load More</string>
   	<string name="pull_down_more">Pull Load More</string>
   	<string name="begin_download">Begin Download</string>
   	<string name="theme_size">Theme Size：</string>
	<string name="theme_update_time">Update Time:</string>
	<string name="theme_description">Description:</string>
	<string name="praise">Praise</string>
	<string name="download">Download</string>
	<string name="transition_share">transition_share</string>
	<string name="title_title">TitleFlowIndicator</string>
	<string name="diff_title">DifferentViewFlow</string>
	<string name="classic">Classic</string>
	<string name="hot">Hot</string>
	<string name="sort">Sort</string>
	<string name="sort1">Sort1</string>
	<string name="sort2">Sort2</string>
	<string name="sort3">Sort3</string>
	<string name="sort4">Sort4</string>
	<string name="sort5">Sort5</string>
	<string name="sort6">Sort6</string>
	
	<string name="loading">Loading</string>
	<string name="respose_fail">respose fail</string>
	
</resources>
