<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"  
    android:clipToPadding="true"
    android:layout_height="match_parent" >
    <HorizontalScrollView 
        android:id="@+id/hs_show_preview"
        android:layout_width="wrap_content"
        android:layout_gravity="center_vertical" 
        android:scrollbars="none"
        android:layout_height="400dp"
        android:padding="4dp">
        <LinearLayout  
		    android:id="@+id/id_gallery"  
		    android:layout_width="wrap_content"  
		    android:layout_height="wrap_content"  
		    android:layout_gravity="center_vertical"  
		    android:orientation="horizontal" >  
		</LinearLayout>
    </HorizontalScrollView>
    <LinearLayout 
        android:id="@+id/ll_detial_info"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/hs_show_preview"
        android:padding="4dp"
        android:orientation="vertical">
        <TextView android:id="@+id/tv_theme_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="8pt"
            android:text="@string/theme_name"/>
        <TextView android:id="@+id/tv_theme_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:textSize="8pt"
            android:text="@string/theme_size"/>
        <TextView android:id="@+id/tv_theme_updatetime"
            android:layout_width="wrap_content"
             android:textSize="8pt"
            android:layout_height="wrap_content"
            android:text="@string/theme_update_time"/>
        <TextView android:id="@+id/tv_theme_discription"
            android:layout_width="wrap_content"
             android:textSize="8pt"
            android:layout_height="wrap_content"
            android:text="@string/theme_description"/>
    </LinearLayout>
    <Button android:id="@+id/bt_praise"
        android:layout_width="172dp"
        android:layout_height="45dp"
        android:text="@string/praise"
        android:layout_alignParentStart="true"
        android:layout_marginStart="4dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="4dp"/>
    <Button android:id="@+id/bt_download"
        android:layout_width="172dp"
        android:layout_height="45dp"
        android:text="@string/download"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
